device-manager: Don't emit device-removed with a finalized instance

https://bugzilla.gnome.org/show_bug.cgi?id=712812